<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constUmum"
    style="@style/TextAppearance.MaterialComponents.Button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".HomeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="409dp"
        android:layout_height="85dp"
        app:cardBackgroundColor="#D5D5D5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btngaris"
                style="@style/TextAppearance.AppCompat.Widget.Button"
                android:layout_width="47dp"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/baseline_menu_24"
                android:text="@string/btngaris"
                android:textColorHint="#A31010"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="#FF0000" />

            <TextView
                android:id="@+id/txtJudul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginTop="18dp"
                android:text="@string/txtJudul"
                android:textSize="34sp"
                app:layout_constraintStart_toEndOf="@+id/btngaris"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnNotify"
                android:layout_width="53dp"
                android:layout_height="49dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/baseline_notifications_24"
                android:text="@string/btnNotify"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/txtJudul"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardbawah"
        android:layout_width="409dp"
        android:layout_height="85dp"
        android:layout_marginBottom="4dp"
        app:cardBackgroundColor="#D5D5D5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="14dp"
                android:text="@string/btnHome"
                app:icon="@drawable/baseline_home_24"
                app:iconGravity="top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnAll"
        android:layout_width="62dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnAll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/button5"
        android:layout_width="80dp"
        android:layout_height="43dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnAksi"
        app:layout_constraintStart_toEndOf="@+id/btnAll"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/button6"
        android:layout_width="98dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnHorror"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/button7"
        android:layout_width="87dp"
        android:layout_height="43dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnKocak"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginTop="85dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:background="@drawable/ic_launcher_foreground"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img" />

            <TextView
                android:id="@+id/txtJudulCerita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/txtJudulCerita"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img" />

            <TextView
                android:id="@+id/txtby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/txtbantupenulis"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtJudulCerita" />

            <TextView
                android:id="@+id/txtPenulis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/txtpenulisCerita"
                app:layout_constraintStart_toEndOf="@+id/txtby"
                app:layout_constraintTop_toBottomOf="@+id/txtJudulCerita" />

            <TextView
                android:id="@+id/txtDesc"
                android:layout_width="330dp"
                android:layout_height="111dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/txtDesc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtby" />

            <Button
                android:id="@+id/btnRead"
                style="@style/TextAppearance.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/karla"
                android:text="@string/btnRead"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                app:cornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.96"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDesc" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
</androidx.constraintlayout.widget.ConstraintLayout>