<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReadActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewKomenRead"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginTop="530dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:background="@drawable/ic_launcher_foreground"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img" />

            <TextView
                android:id="@+id/txtJudulCerita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/txtJudulCerita"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img" />

            <TextView
                android:id="@+id/txtby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/txtbantupenulis"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtJudulCerita" />

            <TextView
                android:id="@+id/txtPenulis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/txtpenulisCerita"
                app:layout_constraintStart_toEndOf="@+id/txtby"
                app:layout_constraintTop_toBottomOf="@+id/txtJudulCerita" />

            <TextView
                android:id="@+id/txtDesc"
                android:layout_width="330dp"
                android:layout_height="111dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/txtDesc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtby" />

            <Button
                android:id="@+id/btnRead"
                style="@style/TextAppearance.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/karla"
                android:text="@string/btnRead"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                app:cornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.96"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDesc" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="409dp"
        android:layout_height="75dp"
        app:cardBackgroundColor="#C5C5C5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnNotify2"
                android:layout_width="53dp"
                android:layout_height="49dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/baseline_notifications_24"
                android:text="@string/btnNotify"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btngaris2"
                style="@style/TextAppearance.AppCompat.Widget.Button"
                android:layout_width="47dp"
                android:layout_height="43dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/baseline_menu_24"
                android:text="@string/btngaris"
                android:textColorHint="#A31010"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="#FF0000" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/txtReadCerbung"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>