<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCerbung3Activity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="#F8EFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:backgroundTint="#F7EEFE"
                android:src="@drawable/baseline_notifications_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:backgroundTint="#F7EEFE"
                android:src="@drawable/baseline_menu_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/karla"
                android:text="Create Cerbung"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView8"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:backgroundTint="#F8EFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#F8EFFF">

            <Button
                android:id="@+id/btnPrefsCreateCerbung3"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/karla"
                android:text="@string/btnPrefs"
                android:textSize="10sp"
                app:icon="@drawable/baseline_settings_24"
                app:iconGravity="top"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnUserCreateCerbung3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btnUserCreateCerbung3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/karla"
                android:text="@string/btnUser"
                android:textSize="10sp"
                app:icon="@drawable/baseline_supervised_user_circle_24"
                app:iconGravity="top"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnCreateCerbung3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btnFollowingCreateCerbung3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/karla"
                android:text="@string/btnFollowing"
                android:textSize="10sp"
                app:icon="@drawable/baseline_bookmark_24"
                app:iconGravity="top"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnHomeCreateCerbung3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btnCreateCerbung3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/karla"
                android:text="@string/btnCreate"
                android:textSize="10sp"
                app:icon="@drawable/baseline_note_add_24"
                app:iconGravity="top"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnFollowingCreateCerbung3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btnHomeCreateCerbung3"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/karla"
                android:text="@string/btnHome"
                android:textSize="10sp"
                app:icon="@drawable/baseline_home_24"
                app:iconGravity="top"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnPrevCreateCerbung3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/karla"
        android:text="Prev"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPolicy" />

    <Button
        android:id="@+id/btnPublish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/karla"
        android:text="Publish This Cerbung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPolicy" />

    <TextView
        android:id="@+id/txtViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView7" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDesc" />

    <TextView
        android:id="@+id/txtViewPara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="26dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxPolicy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textViewDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewTitle" />

    <CheckBox
        android:id="@+id/checkBoxPolicy"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="68dp"
        android:maxLines="4"
        android:text="I agree with the rules and policies in creating\nCerbung. This includes not containing racial slurs,\ndiscrimination, religion, advertisements, and\npolitics"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewPara" />

</androidx.constraintlayout.widget.ConstraintLayout>